# SFM-for-multi-camera-rig

./: 功能说明.txt  编译指南.docx
src/: Bundle_Adjustment_Ceres_group.cpp  Bundle_Adjustment_Ceres_group.h  CMakeLists.txt
src/openMVG/matching/: pairwiseAdjacencyDisplay.hpp
src/openMVG/matching_image_collection/: Pair_Builder.hpp
src/openMVG/numeric/: numeric.h
src/openMVG/sfm/: sfm_data_BA.hpp  sfm_data_BA_ceres.cpp  sfm_data_BA_ceres.hpp  sfm_data_BA_ceres_camera_functor.hpp  sfm_data_io.cpp  sfm_data_io_cereal.cpp  sfm_data_transform.cpp  sfm_data_triangulation.cpp
src/openMVG/sfm/pipelines/: sfm_matches_provider.hpp
src/openMVG/sfm/pipelines/global/: sfm_global_engine_relative_motions.cpp
src/openMVG/sfm/pipelines/sequential/: sequential_SfM.cpp  sequential_SfM2.cpp
src/openMVG/sfm/pipelines/stellar/: stellar_solver.cpp
src/software/: CMakeLists.txt
src/software/CSFM/: CMakeLists.txt  CSFM.hpp  main_CSFM.cpp  功能描述及修改日志.txt
src/software/SfM/: main_Init_ImageListing_from_known_SfMdata.cpp
src/software/fatCSFM/: CMakeLists.txt  fatCSFM.hpp  main_fatCSFM.cpp  siftgpu_GLSL.h  功能描述及修改日志.txt
src/software/inherentCSFM/: CMakeLists.txt  main_inherentCSFM.cpp
